fix: dark mode active button colour

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@
     --color-button-accent-primary: #a3a0b0;
     --color-button-accent-secondary: #a3a0b0;
     --color-button-primary: #0099cc;
-    --color-button-active: #00171f;
+    --color-button-active: #003242;
     --color-text-primary: #ffffff;
     --color-text-secondary: #a3a0b0;
     --color-text-tertiary: #fff;
